# fluss-rs

./: .gitignore  Cargo.toml  README.md
crates/examples/: Cargo.toml
crates/examples/src/: example_table.rs
crates/fluss/: Cargo.toml
crates/fluss/src/: build.rs  config.rs  error.rs  lib.rs
crates/fluss/src/client/: admin.rs  connection.rs  metadata.rs  mod.rs
crates/fluss/src/client/table/: append.rs  mod.rs  scanner.rs  writer.rs
crates/fluss/src/client/write/: accumulator.rs  batch.rs  broadcast.rs  bucket_assigner.rs  mod.rs  sender.rs  writer_client.rs
crates/fluss/src/cluster/: cluster.rs  mod.rs
crates/fluss/src/metadata/: datatype.rs  json_serde.rs  mod.rs  table.rs
crates/fluss/src/proto/: fluss_api.proto
crates/fluss/src/record/: arrow.rs  error.rs  mod.rs
crates/fluss/src/row/: column.rs  datum.rs  mod.rs
crates/fluss/src/rpc/: api_key.rs  api_version.rs  convert.rs  error.rs  frame.rs  mod.rs  server_connection.rs  transport.rs
crates/fluss/src/rpc/message/: create_table.rs  fetch.rs  get_table.rs  header.rs  mod.rs  produce_log.rs  update_metadata.rs
crates/fluss/src/util/: mod.rs
