[package]
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }
name = "fluss"
build = "src/build.rs"

[dependencies]
arrow = "55.1.0"
arrow-schema = "55.1.0"
byteorder = "1.5"
futures = "0.3"
clap = { workspace = true }
crc32c = "0.6.8"
linked-hash-map = "0.5.6"
prost = "0.13.5"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
thiserror = "1.0"
tracing = "0.1"
tokio = { workspace = true }
parking_lot = "0.12"
bytes = "1.10.1"
dashmap = "6.1.0"
rust_decimal = "1"
ordered-float = { version = "4", features = ["serde"] }
parse-display = "0.10"
ref-cast = "1.0"
chrono = { version = "0.4", features = ["clock", "std", "wasmbind"] }



[build-dependencies]
prost-build = "0.13.5"